components/bamoe/services/data-index/data-index-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: data-index
  name: data-index
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: data-index
