components/bamoe/services/data-index/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-index
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: data-index
